fix: Submitボタンとカラーピッカーの間にgapを追加

--- a/src/style.css
+++ b/src/style.css
@@ -55,6 +55,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  gap: 10px;
 }
 
 /* ================================================================================
